--- a/.gitignore
+++ b/.gitignore
@@ -238,6 +238,8 @@ ClientBin/
 *.jfm
 *.pfx
 *.publishsettings
+*.db-shm
+*.db-wal
 orleans.codegen.cs
 
 # Including strong name files can present a security risk
